<resources>
    <string name="app_name">客户分析系统</string>
    <string name="username_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登     录</string>
    <string name="error_alias_empty">别名为空</string>
    <string name="error_tag_gs_empty">标签为空</string>
    <string name="name">姓名：</string>
    <string name="sex">性别：</string>
    <string name="age">年龄：</string>
    <string name="phone">手机号：</string>
</resources>
