<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wqz.customeranalysis.LoginActivity"
    android:background="@mipmap/login_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/white_round_corner"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/username_hint"
            android:textColorHint="@color/colorWhiteTrans"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_below="@+id/et_login_username"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_round_corner"
            android:padding="5dp"
            android:hint="@string/password_hint"
            android:textColorHint="@color/colorWhiteTrans"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/et_login_password"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_round_corner"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"/>

    </RelativeLayout>
</RelativeLayout>
